# traffic-analyzer

./: .gitignore  CMakeLists.txt  Makefile  README.md  REFACTORING.md  build.sh  generate_traffic.py  test_generator.py
include/: display.h  dpdk_adapter.h  dpdk_init.h  flow_analyzer.h  packet_parser.h  stats_collector.h
include/analyzer/: fingerprint_table.h  flow_table.h  geolocation.h  ip_table.h
include/app/: packet_parser.h  stats_collector.h
include/core/: config.h  hash_table.h  types.h
include/display/: formatter.h  renderer.h
include/protocol/: dns.h  ethernet.h  icmp.h  ip.h  tcp.h  tls.h  udp.h
include/stats/: counters.h  traffic_stats.h
src/: display.c  dpdk_adapter.c  dpdk_init.c  flow_analyzer.c  main.c  packet_parser.c  stats_collector.c
src/analyzer/: fingerprint_table.c  flow_table.c  geolocation.c  ip_table.c
src/app/: main.c  packet_parser.c  stats_collector.c
src/core/: hash_table.c  types.c
src/display/: formatter.c  renderer.c
src/protocol/: dns.c  ethernet.c  icmp.c  ip.c  tls.c
src/stats/: counters.c  traffic_stats.c
